<resources>
    <string name="app_name">MercaExpress</string>
    <string name="title_home">Inicio</string>
    <string name="title_cart">Carrito</string>
    <string name="title_user_profile">Perfil</string>
    <string name="title_offert">Promos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Text_puntos_acumulados">Puntos Acumulados:</string>
    <string name="Text_security">Seguridad</string>
    <string name="Text_user">Mis datos</string>
    <string name="Text_contact">Comunicate con nosotros</string>
    <string name="Text_login">Ingresar a market xpress</string>
    <string name="profile_configuracion_section">Configuración</string>
    <string name="nom_usuario_login">nombre del usuario</string>
    <string name="btn_ingresar_login">Ingresar</string>
    <string name="password_login">Contraseña</string>
    <string name="olvidar_pass_login">Olvide mi contraseña</string>
    <string name="crear_una_cuenta_login">Crear una cuenta</string>
    <string name="category_detail">Categoria:  </string>
    <string name="nombre_del_producto_detail">Nombre del producto</string>
    <string name="nombre_de_la_categoria_detail">Nombre de la categoria</string>
    <string name="price_simbol_detail">$</string>
    <string name="value_detail">000000</string>
    <string name="descripci_n_detauil">Descripción:</string>
    <string name="description_product_detail">Aqui va a ir la descripcion del producto detalladamente</string>
    <string name="agregar_detail_prudctu">Agregar</string>
</resources>
