<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.ProductDetail">

    <ImageView
        android:id="@+id/image_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorAccent"/>
    <TextView
        android:id="@+id/name_datail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_producto_detail"
        android:layout_marginStart="@dimen/Margin_20dp"
        android:layout_marginTop="@dimen/Margin_20dp"
        android:textSize="18sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tagCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_detail"
            android:layout_marginStart="@dimen/Margin_20dp"
            android:layout_marginTop="@dimen/Margin_10dp"
            android:textSize="10sp"/>
        <TextView
            android:id="@+id/nameCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tagCategory"
            android:layout_marginTop="@dimen/Margin_10dp"
            android:layout_marginStart="5dp"
            android:text="@string/nombre_de_la_categoria_detail"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/price_simbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagCategory"
            android:text="@string/price_simbol_detail"
            android:layout_marginStart="@dimen/Margin_20dp"
            android:layout_marginTop="@dimen/Margin_10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/price_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagCategory"
            android:layout_toEndOf="@id/price_simbol"
            android:text="@string/value_detail"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/Margin_10dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tagDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/price_detail"
            android:text="@string/descripci_n_detauil"
            android:textSize="12sp"
            android:layout_marginStart="@dimen/Margin_20dp"
            android:layout_marginTop="@dimen/Margin_10dp"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagDescription"
            android:text="@string/description_product_detail"
            android:textSize="12sp"
            android:layout_marginStart="@dimen/Margin_20dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/Margin_20dp">
        <ImageButton
            android:id="@+id/decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_subtract"
            android:background="@android:color/transparent"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/cant_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="1"
            android:textSize="15sp"
            android:layout_margin="10dp"/>
        <ImageButton
            android:id="@+id/increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:background="@android:color/transparent"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/bg_button_product"
            android:layout_gravity="center"
            android:text="@string/agregar_detail_prudctu"
            android:textColor="@color/colorText"
            android:layout_marginStart="10dp"
            android:textSize="12sp"/>

    </LinearLayout>




</LinearLayout>