<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:layout_margin="@dimen/Margin_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_margin="@dimen/Margin_20dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editUserLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_usuario_login"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editPassLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_login"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/olvidar_pass_login"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/Margin_20dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_una_cuenta_login"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/Margin_10dp"/>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/btn_ingresar_login"
            android:textColor="@color/colorText"
            android:layout_marginTop="@dimen/Btn_login_ingresar"/>





    </LinearLayout>


</RelativeLayout>